--- a/.github/workflows/pandoc-beamer-pdf.yml
+++ b/.github/workflows/pandoc-beamer-pdf.yml
@@ -40,7 +40,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Download PDF artifact
-      uses: actions:download-artifact@v4
+      uses: actions/download-artifact@v4
       with:
         name: beamer-pdf
         path: .
