--- a/.github/workflows/pandoc-beamer-pdf.yml
+++ b/.github/workflows/pandoc-beamer-pdf.yml
@@ -18,6 +18,10 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
+      
+    - name: Install make
+      run: |
+        apt-get update && apt-get install -y make # Install make inside the container
 
     - name: Run Makefile target 'md2pdf'
       run: |
