--- a/.github/workflows/pandoc-beamer-pdf.yml
+++ b/.github/workflows/pandoc-beamer-pdf.yml
@@ -48,6 +48,7 @@ jobs:
 
     - name: Compile PDF with Pandoc
       run: |
+        cd presentation
         # IMPORTANT: Replace 'presentation.md' and 'presentation.pdf' with your actual filenames.
         # Ensure 'ukceh.latex' exists in your repository's root, or provide its full path.
         pandoc -s --template ukceh.latex -o presentation.pdf slides.md --to=beamer
